# sahomedb

./: .editorconfig  .env.example  .gitignore  .prettierrc.yml  Cargo.toml  Dockerfile  Rocket.toml  code_of_conduct.md  contributing.md  pyproject.toml  readme.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  do_chore.md  feature_request.md
.github/issue_template/: bug_report.md  config.yml  feature_request.md
.github/workflows/: check.yml  deploy-docker-image.yml  deploy.yml
bench/: main.rs  utils.rs
db/: db
docs/: changelog.md  contributing.md  pull_request_template.md  security.md
examples/: extract-metadata.rs  measure-memory.rs
src/: lib.rs  main.rs
src/api/: graphs.rs  mod.rs  values.rs
src/db/: client.rs  database.rs  mod.rs  server.rs
src/db/routes/: build.rs  graphs.rs  index.rs  kvs.rs  mod.rs  search.rs  values.rs
src/db/utils/: request.rs  response.rs  stream.rs
src/func/: collection.rs  mod.rs  utils.rs
src/ix/: hyperplane.rs  index.rs  mod.rs  tree.rs  utils.rs  vector.rs
src/tests/: mod.rs  test_collection.rs  test_database.rs  test_graphs.rs  test_index.rs  test_values.rs
tests/: test_servers.rs
tests/common/: mod.rs
