[package]
name = "sahomedb"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
# Async runtime.
tokio = { version = "1", features = ["full"] }

# Tools.
http = "1.0.0"
httparse = "1.8.0"
reqwest = "0.12.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.193"
rand = "0.8.5"
instant-distance = "0.6.1"
dotenv = "0.15.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1